# The-Purple-Box

./: Linear_Algebra.ipynb  finance_program.ipynb  lyla.py  lyla_v2.py
mendicant_lyla_crew/: math_logic.py  pyproject.toml
mendicant_lyla_crew/src/mendicant_lyla_crew/: crew.py
mendicant_lyla_crew/src/mendicant_lyla_crew/config/: agents.yaml  tasks.yaml
