[project]
name = "mendicant_lyla_crew"
version = "0.1.0"
description = "mendicant_lyla_crew using crewAI"
authors = [{ name = "Casimirx - BladimirK", email = "bladimirkolodzie25@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.9.3",
    "fastapi>=0.128.1",
    "litellm>=1.75.3",
    "numpy>=1.26.0",
    "networkx>=3.0"
]

[project.scripts]
mendicant_lyla_crew = "mendicant_lyla_crew.main:run"
run_crew = "mendicant_lyla_crew.main:run"
train = "mendicant_lyla_crew.main:train"
replay = "mendicant_lyla_crew.main:replay"
test = "mendicant_lyla_crew.main:test"
run_with_trigger = "mendicant_lyla_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
